elipse extra strings

--- a/index.html
+++ b/index.html
@@ -134,8 +134,8 @@
 					      <img class="img" src="{{item.imageUrl}}" alt="{{item.name}}">
 					      <div class="caption">
 					        <h4 class="ellipsis">{{item.name}}</h4>
-					        <p>{{item.ram | toMemory}} Ram | {{item.memory | toMemory}} Storage</p>
-					        <p>{{item.camera}} MP Camera | {{item.battery}} mAh Battery</p>
+					        <p class="ellipsis">{{item.ram | toMemory}} Ram | {{item.memory | toMemory}} Storage</p>
+					        <p class="ellipsis">{{item.camera}} MP Camera | {{item.battery}} mAh Battery</p>
 					      </div>
 					    </div>
 					</a>
