moving js to up

--- a/index.html
+++ b/index.html
@@ -7,6 +7,10 @@
 	    <title>Gsmarena phone filter</title>
 	    <link rel="stylesheet" href="bower_components/bootstrap/dist/css/bootstrap.css">
 	    <link rel="stylesheet" href="bower_components/seiyria-bootstrap-slider/dist/css/bootstrap-slider.css">
+	    <script src="bower_components/jquery/dist/jquery.js"></script>
+		<script src="bower_components/angular/angular.js"></script>
+		<script src="bower_components/bootstrap/dist/js/bootstrap.js"></script>
+		<script src="bower_components/seiyria-bootstrap-slider/dist/bootstrap-slider.js"></script>
 	    <link rel="stylesheet" href="css/main.css">
 	</head>
 	<body ng-controller="contentController" class="main-container">
@@ -145,10 +149,7 @@
 			</div>
 		</div>
 
-		<script src="bower_components/jquery/dist/jquery.js"></script>
-		<script src="bower_components/angular/angular.js"></script>
-		<script src="bower_components/bootstrap/dist/js/bootstrap.js"></script>
-		<script src="bower_components/seiyria-bootstrap-slider/dist/bootstrap-slider.js"></script><!-- angular-slider include -->
+		<!-- angular-slider include -->
 
 		<!-- angular-slider include -->
 		<script src="js/slider.js"></script>
