item price added

--- a/index.html
+++ b/index.html
@@ -140,6 +140,7 @@
 					        <h4 class="ellipsis">{{item.name}}</h4>
 					        <p class="ellipsis">{{item.ram | toMemory}} Ram | {{item.memory | toMemory}} Storage</p>
 					        <p class="ellipsis">{{item.camera}} MP Camera | {{item.battery}} mAh Battery</p>
+					        <p class="price-text">Price : {{item.price | currency : 'EUR ' : 2}}</p>
 					      </div>
 					    </div>
 					</a>
