--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 		<script src="bower_components/angular/angular.js"></script>
 		<script src="bower_components/bootstrap/dist/js/bootstrap.js"></script>
 		<script src="bower_components/seiyria-bootstrap-slider/dist/bootstrap-slider.js"></script>
-	    <link rel="stylesheet" href="css/main.css">
+	    <link rel="stylesheet" href="css/main.css?v=1.0">
 	</head>
 	<body ng-controller="contentController" class="main-container">
 		<div class="page-header">
@@ -132,15 +132,25 @@
 			<div class="col-sm-9">
 				<div class="row">
 
-				  <div class="col-sm-5 col-md-4 col-lg-3" ng-repeat="item in items">
+				  <div
+				  	class="col-sm-5 col-md-4 col-lg-3"
+				  	ng-mouseover="itemMouseOver()"
+				  	ng-mouseleave="itemMouseLeave()"
+				  	ng-repeat="item in items">
 				  	<a href="{{item.url}}" target="_blank">
 					    <div class="thumbnail">
 					      <img class="img" src="{{item.imageUrl}}" alt="{{item.name}}">
 					      <div class="caption">
 					        <h4 class="ellipsis">{{item.name}}</h4>
-					        <p class="ellipsis">{{item.ram | toMemory}} Ram | {{item.memory | toMemory}} Storage</p>
-					        <p class="ellipsis">{{item.camera}} MP Camera | {{item.battery}} mAh Battery</p>
-					        <p class="price-text">Price : {{item.price | currency : 'EUR ' : 2}}</p>
+					        <p class="ellipsis">
+					        	{{item.ram | toMemory}} Ram | {{item.memory | toMemory}} Storage
+					        </p>
+					        <p class="ellipsis">
+					        	{{item.camera}} MP Camera | {{item.battery}} mAh Battery
+					        </p>
+					        <p class="{{priceClass}}">
+					        	Price : {{item.price | currency : 'EUR ' : 2}}
+					        </p>
 					      </div>
 					    </div>
 					</a>
